--- a/Assets/AirConsole/examples/pong/controller.html
+++ b/Assets/AirConsole/examples/pong/controller.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script type="text/javascript"
-            src="http://www.airconsole.com/api/airconsole-1.1.js"></script>
+            src="http://www.airconsole.com/api/airconsole-1.2.js"></script>
     <script type="text/javascript">
     navigator.vibrate = (navigator.vibrate ||
                          navigator.webkitVibrate ||
@@ -21,13 +21,9 @@
           console.log("Vibrating: " + data.vibrate);
         }
       }
-      airconsole.onReady = function(code, device_id, device_data) {
+      airconsole.onReady = function(code) {
         var div = document.getElementById("player_id");
-        if (device_id <= 2) {
-          div.innerHTML = "You are Player " + device_id;
-        } else {
-          div.innerHTML = "This is a two player game!";
-        }
+        div.innerHTML = "You are Player " + airconsole.device_id;
       }
     }
 
