--- a/Assets/AirConsole/examples/pong/controller.html
+++ b/Assets/AirConsole/examples/pong/controller.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script type="text/javascript"
-            src="http://www.airconsole.com/api/airconsole-1.2.js"></script>
+            src="http://www.airconsole.com/api/airconsole-1.3.0.js"></script>
     <script type="text/javascript">
     navigator.vibrate = (navigator.vibrate ||
                          navigator.webkitVibrate ||
@@ -10,6 +10,7 @@
                          navigator.msVibrate);
 
     var airconsole;
+    var active_players = null;
     /**
      * Sets up the communication to the screen.
      */
@@ -21,9 +22,36 @@
           console.log("Vibrating: " + data.vibrate);
         }
       }
-      airconsole.onReady = function(code) {
-        var div = document.getElementById("player_id");
-        div.innerHTML = "You are Player " + airconsole.device_id;
+      airconsole.onConnect = function(device_id) {
+        if (active_players == null) {
+          var candidate_players = airconsole.getControllerDeviceIds();
+          if (candidate_players.length == 2) {
+            active_players = candidate_players;
+          }
+        }
+        updateText();
+      }
+      
+      airconsole.onDisconnect = function(device_id) {
+        if (active_players && (active_players[0] == device_id || active_players[1] == device_id)) {
+          active_players = null;
+        }
+        updateText();
+      }
+    }
+
+	function updateText() {
+	  var div = document.getElementById("player_id");
+      if (active_players) {
+	    if (active_players[0] == airconsole.getDeviceId()) {
+	      div.innerHTML = "You are the player on the left";
+        } else if (active_players[1] == airconsole.getDeviceId()) {
+          div.innerHTML = "You are the player on the right";
+        }
+      } else if (airconsole.getControllerDeviceIds().length < 2) {
+        div.innerHTML = "Waiting for more players.";
+      } else {
+         div.innerHTML = "You are not in the game. Cheer!";
       }
     }
 
