--- a/Assets/WebGLTemplates/AirConsole/index.html
+++ b/Assets/WebGLTemplates/AirConsole/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <script src="TemplateData/UnityProgress.js"></script>
-    <script type="text/javascript" src="http://www.airconsole.com/api/airconsole-1.3.0.js"></script>
+    <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.3.0.js"></script>
     <script type="text/javascript" src="./airconsole-unity-plugin.js"></script>
     <script type="text/javascript" src="https://code.createjs.com/tweenjs-0.6.0.min.js"></script>
 	  <script type="text/javascript" src="TemplateData/CSSPlugin.js"></script>
