--- a/Assets/WebGLTemplates/AirConsole/index.html
+++ b/Assets/WebGLTemplates/AirConsole/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-    <title>Unity WebGL Player | %UNITY_WEB_NAME%</title>
+    <title>%UNITY_WEB_NAME%</title>
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <script src="TemplateData/UnityProgress.js"></script>
-    <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.3.0.js"></script>
+    <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.4.0.js"></script>
     <script type="text/javascript" src="./airconsole-unity-plugin.js"></script>
     <script type="text/javascript" src="https://code.createjs.com/tweenjs-0.6.0.min.js"></script>
 	  <script type="text/javascript" src="TemplateData/CSSPlugin.js"></script>
