- Show a Loading Screen on AndroidTV - Removed PostBuildProcess for creating ScreenData folder, use WebGL screen data instead

--- a/Assets/WebGLTemplates/AirConsole/index.html
+++ b/Assets/WebGLTemplates/AirConsole/index.html
@@ -7,11 +7,6 @@
     <title>%UNITY_WEB_NAME%</title>
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.4.0.js"></script>
-    <script type="text/javascript" src="./airconsole-unity-plugin.js"></script>
-    <script type="text/javascript" src="https://code.createjs.com/tweenjs-0.6.0.min.js"></script>
-	  <script type="text/javascript" src="TemplateData/CSSPlugin.js"></script>
     <!--
       Unity WebGL Custom Progress Bar by Alexander Ocias
       https://ocias.com/
@@ -60,7 +55,11 @@
       margin-top: 10px;
       }
     </style>
-    
+    <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.4.0.js"></script>
+    <script type="text/javascript" src="./airconsole-unity-plugin.js"></script>
+    <script type="text/javascript" src="TemplateData/UnityProgress.js"></script>
+    <script type="text/javascript" src="TemplateData/tweenjs-0.6.0.min.js"></script>
+    <script type="text/javascript" src="TemplateData/CSSPlugin.js"></script>
   </head>
   <body class="template" onload="initAirConsole()">
     <div class="template-wrap clear">
