prettier default loading screen

--- a/Assets/WebGLTemplates/AirConsole/index.html
+++ b/Assets/WebGLTemplates/AirConsole/index.html
@@ -35,11 +35,11 @@
            height: 9
          };
          var progress_bar_config = {
-           left: "35%",
-           top: "65%",
-           width: "30%",
-           height: "5%",
-           background: "#000000",
+           left: "42.6%",
+           top: "57.8%",
+           width: "14.7%",
+           height: "1.6%",
+           background: "#3b3b3b",
            color: "#ADEE00"
          };
          window.app = new App('game', unity_web_config, progress_bar_config);
