--- a/Assets/WebGLTemplates/AirConsole/index.html
+++ b/Assets/WebGLTemplates/AirConsole/index.html
@@ -20,6 +20,7 @@
       html, body {
         margin: 0;
         padding: 0;
+        overflow: hidden;
         text-align: center;
         font-family: sans-serif;
       }
