--- a/Assets/AirConsole/examples/basic/controller.html
+++ b/Assets/AirConsole/examples/basic/controller.html
@@ -18,17 +18,12 @@
    border-radius: 6px;
    width: 100%;
    text-align: left;
+   box-sizing: border-box;
   }
   
-  .button-left{
-   width: 50%;
-   left: 0px;   
-  }
-  
-  .button-right{
-   width: 50%;
-   float: right;
-   right: 0px;   
+  .button-half{
+   width: 49%;
+   display: inline-block;  
   }
   
   #content{
@@ -185,30 +180,26 @@
  
 </head>
 <body onload="window.app = new App()">
-
     <div style="margin-top:50px">
-        <div style="float:left">
-         <button class="button" ontouchstart="window.app.sendMessageToScreen('left')" ontouchend="window.app.sendMessageToScreen('stop')">Send Message to Screen: Rotate Logo Left</button>
-         <button class="button" ontouchstart="window.app.sendMessageToScreen('right')" ontouchend="window.app.sendMessageToScreen('stop')">Send Message to Screen: Rotate Logo Right</button>
-         <button class="button button-left" ontouchstart="window.app.broadcastMessage('Hey everyone!')" >Broadcast Message</button>
-         <button class="button button-right" ontouchstart="window.app.displayDeviceId()">Show my Device Id</button>
-         <button class="button button-left" ontouchstart="window.app.displayNickname()">Show my Nickname</button>
-         <button class="button button-right" ontouchstart="window.app.displayProfilePicture()">Show Profile Picture</button>
-         <button class="button" ontouchstart="window.app.setSomeCustomData()">Set Custom Data on this Device</button>
-         <button class="button" ontouchstart="window.app.setCustomDeviceStateProperty('health', 50)">Set 'health' property on this Device</button>
-         <button class="button" ontouchstart="window.app.displayNumberOfControllers()">Show Number of connected Controllers</button>
-         <button class="button" ontouchstart="window.app.showPlayerNumber()">Show my Player Number</button>
-         <button class="button button-left" ontouchstart="window.app.showServerTime()">Show Server Time</button>
-         <button class="button button-right" ontouchstart="window.app.showLoginStatus()">Am I logged in?</button>
-         <button class="button button-left" ontouchstart="window.app.hideDefaultUI()">Hide Default UI</button>
-         <button class="button button-right" ontouchstart="window.app.showDefaultUI()">Show Default UI</button>
-         <button class="button button-left" ontouchstart="window.app.navigateHome()">Navigate Home </button>
-         <button class="button button-right" ontouchstart="window.app.navigateToPong()">Navigate to Pong</button>
-         <button class="button button-left" ontouchstart="window.app.tellScreenToShowAd()">Show ad (Screen)</button>
-         <button class="button button-right" ontouchstart="window.app.becomePremium()">Become Premium</button>
-         <button class="button button-left" ontouchstart="window.app.showMaster()">Show Master Id</button>
-        </div>
-        
+         <div class="button" ontouchstart="window.app.sendMessageToScreen('left')" ontouchend="window.app.sendMessageToScreen('stop')">Send Message to Screen: Rotate Logo Left</div>
+         <div class="button" ontouchstart="window.app.sendMessageToScreen('right')" ontouchend="window.app.sendMessageToScreen('stop')">Send Message to Screen: Rotate Logo Right</div>
+         <div class="button button-half" ontouchstart="window.app.broadcastMessage('Hey everyone!')">Broadcast Message</div>
+         <div class="button button-half" ontouchstart="window.app.displayDeviceId()">Show my Device Id</div>
+         <div class="button button-half" ontouchstart="window.app.displayNickname()">Show my Nickname</div>
+         <div class="button button-half" ontouchstart="window.app.displayProfilePicture()">Show Profile Picture</div>
+         <div class="button" ontouchstart="window.app.setSomeCustomData()">Set Custom Data on this Device</div>
+         <div class="button" ontouchstart="window.app.setCustomDeviceStateProperty('health', 50)">Set 'health' property on this Device</div>
+         <div class="button" ontouchstart="window.app.displayNumberOfControllers()">Show Number of connected Controllers</div>
+         <div class="button" ontouchstart="window.app.showPlayerNumber()">Show my Player Number</div>
+         <div class="button button-half" ontouchstart="window.app.showServerTime()">Show Server Time</div>
+         <div class="button button-half" ontouchstart="window.app.showLoginStatus()">Am I logged in?</div>
+         <div class="button button-half" ontouchstart="window.app.hideDefaultUI()">Hide Default UI</div>
+         <div class="button button-half" ontouchstart="window.app.showDefaultUI()">Show Default UI</div>
+         <div class="button button-half" ontouchstart="window.app.navigateHome()">Navigate Home </div>
+         <div class="button button-half" ontouchstart="window.app.navigateToPong()">Navigate to Pong</div>
+         <div class="button button-half" ontouchstart="window.app.tellScreenToShowAd()">Show ad (Screen)</div>
+         <div class="button button-half" ontouchstart="window.app.becomePremium()">Become Premium</div>
+         <div class="button button-half" ontouchstart="window.app.showMaster()">Show Master Id</div>
     </div>
     <div id ="profile-pic"></div>
     <div id="content"><!--Incoming messages get displayed in this container--></div>
