--- a/Assets/AirConsole/examples/pong/controller.html
+++ b/Assets/AirConsole/examples/pong/controller.html
@@ -27,6 +27,30 @@
       airconsole.onReady = function() {
         updateText();
       }
+
+      /*
+      * Here we are adding support for mouse events manually.
+      * --> WE STRONGLY ENCOURAGE YOU TO USE THE AIRCONSOLE CONTROLS LIBRARY
+      * WHICH IS EVEN BETTER (BUT WE DONT WANT TO BLOAT THE CODE HERE).
+      * https://github.com/AirConsole/airconsole-controls/
+      * 
+      * DO NOT USE ONCLICK HANDLERS.
+      * THEY ADD A 200MS DELAY!
+      */
+      if (!("ontouchstart" in document.createElement("div"))) {
+        var elements = document.getElementsByTagName("*");
+        for (var i = 0; i < elements.length; ++i) {
+          var element = elements[i];
+          var ontouchstart = element.getAttribute("ontouchstart");
+          if (ontouchstart) {
+            element.setAttribute("onmousedown", ontouchstart);
+          }
+          var ontouchend = element.getAttribute("ontouchend");
+          if (ontouchend) {
+            element.setAttribute("onmouseup", ontouchend);
+          }
+        }
+      }
     }
 
 	function updateText(player_number) {
@@ -93,11 +117,11 @@
 </head>
 <body onload="init()">
     <div style="height: 1%"></div>
-    <div class=button ontouchstart="move(5)" ontouchend="move(0)" onmousedown="move(5)" onmouseup="move(0)">
+    <div class=button ontouchstart="move(5)" ontouchend="move(0)">
         <div class="button_label">UP</div>
     </div>
     <div style="height: 8%"></div>
-    <div class=button ontouchstart="move(-5)" ontouchend="move(0)" onmousedown="move(-5)" onmouseup="move(0)">
+    <div class=button ontouchstart="move(-5)" ontouchend="move(0)">
         <div class="button_label">DOWN</div>
     </div>
     <div id="player_id"></div>
