- added new example scenes: Platformer, Swipe and Gyroscope - fixed buttons in Gamestates example controller - added rate limiter, see https://github.com/AirConsole/airconsole-controls/ - updated package with new example scenes

--- a/Assets/AirConsole/examples/gamestates/controller-gamestates.html
+++ b/Assets/AirConsole/examples/gamestates/controller-gamestates.html
@@ -169,11 +169,11 @@
       <div class="button-text">Ingame Screen Button</div>
   </div>
   <div class="view" id="Menu">
-      <div class="button" id="menu-button" ontouchstart="window.app.pressIngameScreenButton()"></div>
+      <div class="button" id="menu-button" ontouchstart="window.app.pressMenuScreenButton()"></div>
       <div class="button-text">Menu Screen Button</div>
   </div>
   <div class="view" id="Pause">
-      <div class="button" id="pause-button" ontouchstart="window.app.pressIngameScreenButton()"></div>
+      <div class="button" id="pause-button" ontouchstart="window.app.pressPauseScreenButton()"></div>
       <div class="button-text">Pause Screen Button</div>
   </div>
 </body>
