added translation functionality (plugin version 2.1)

--- a/Assets/WebGLTemplates/AirConsole/index.html
+++ b/Assets/WebGLTemplates/AirConsole/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.7.0.js"></script>
     <script type="text/javascript" src="./airconsole-unity-plugin.js"></script>
     <script type="text/javascript" src="Build/UnityLoader.js"></script>
+    <script type="text/javascript" src="translation.js"></script>
     <script type="text/javascript">
        function initAirConsole() {
          var unity_web_config = {
