- Fixed Unity 2020 Editor preview not working - Reverted ' to " :(

--- a/Assets/WebGLTemplates/AirConsole-2020/index.html
+++ b/Assets/WebGLTemplates/AirConsole-2020/index.html
@@ -23,77 +23,94 @@
       #unity-canvas {
         height: 100%;
         width: 100%;
-        background-image: url('TemplateData/loading-screen.png') !important;
+        background-image: url("TemplateData/loading-screen.png") !important;
         background-color: black !important;
         background-position: 50% 0 !important;
         background-repeat: no-repeat !important;
         background-size: contain !important;
       }
     </style>
+
+    <script>
+      function getURLParameterByName(name) {
+        name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+        var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+          results = regex.exec(location.search);
+        return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+      }
+    </script>
     <script src="https://www.airconsole.com/api/airconsole-1.7.0.js"></script>
-    <script src="Build/{{{ LOADER_FILENAME }}}"></script>
     <script src="./airconsole-unity-plugin.js"></script>
     <script src="translation.js"></script>
     <script>
       var default_progress_bar_config = {
-        top: '57.8%',
-        left: '42.6%',
-        width: '14.7%',
-        height: '1.6%',
-        background_color: '#3B3B3B',
-        color: '#ADEE00',
+        top: "57.8%",
+        left: "42.6%",
+        width: "14.7%",
+        height: "1.6%",
+        background_color: "#3B3B3B",
+        color: "#ADEE00",
       };
 
       function initAirConsole() {
-        var build_URL = 'Build';
         var unity_web_config = {
           width: 16,
           height: 9,
-          dataUrl: build_URL + '/{{{ DATA_FILENAME }}}',
-          frameworkUrl: build_URL + '/{{{ FRAMEWORK_FILENAME }}}',
-          codeUrl: build_URL + '/{{{ CODE_FILENAME }}}',
-            #if MEMORY_FILENAME
-          memoryUrl: build_URL + '/{{{ MEMORY_FILENAME }}}',
-            #endif
-            #if SYMBOLS_FILENAME
-          symbolsUrl: build_URL + '/{{{ SYMBOLS_FILENAME }}}',
-            #endif
-          streamingAssetsUrl: 'StreamingAssets',
-          companyName: '{{{ COMPANY_NAME }}}',
-          productName: '{{{ PRODUCT_NAME }}}',
-          productVersion: '{{{ PRODUCT_VERSION }}}',
+          streamingAssetsUrl: "StreamingAssets",
         };
 
-        var progress_bar_height = parseFloat('{{{ PROGRESS_BAR_HEIGHT }}}');
-        var progress_bar_width = parseFloat('{{{ PROGRESS_BAR_WIDTH }}}');
-        var progress_bar_offset_top = parseFloat('{{{ PROGRESS_BAR_OFFSET_TOP }}}');
-        var progress_bar_offset_left = parseFloat('{{{ PROGRESS_BAR_OFFSET_LEFT }}}');
+        // Only for the Build (Not for Unity Editor preview)
+        if (!getURLParameterByName("unity-editor-websocket-port")) {
+          var build_URL = "Build";
+          var UNITY_MEMORY_FILENAME = "{{{ MEMORY_FILENAME }}}";
+          var UNITY_SYMBOLS_FILENAME = "{{{ SYMBOLS_FILENAME }}}";
+
+          unity_web_config.dataUrl = build_URL + "/{{{ DATA_FILENAME }}}";
+          unity_web_config.frameworkUrl = build_URL + "/{{{ FRAMEWORK_FILENAME }}}";
+          unity_web_config.codeUrl = build_URL + "/{{{ CODE_FILENAME }}}";
+          unity_web_config.companyName = "{{{ COMPANY_NAME }}}";
+          unity_web_config.productName = "{{{ PRODUCT_NAME }}}";
+          unity_web_config.productVersion = "{{{ PRODUCT_VERSION }}}";
+
+          // Instead of doing #if MEMORY_FILENAME and #if SYMBOLS_FILENAME
+          if (UNITY_MEMORY_FILENAME[0] !== "{") {
+            unity_web_config.memoryUrl = build_URL + "/" + UNITY_MEMORY_FILENAME;
+          }
+          if (UNITY_SYMBOLS_FILENAME[0] !== "{") {
+            unity_web_config.symbolsUrl = build_URL + "/" + UNITY_SYMBOLS_FILENAME;
+          }
+        }
+
+        var progress_bar_height = parseFloat("{{{ PROGRESS_BAR_HEIGHT }}}");
+        var progress_bar_width = parseFloat("{{{ PROGRESS_BAR_WIDTH }}}");
+        var progress_bar_offset_top = parseFloat("{{{ PROGRESS_BAR_OFFSET_TOP }}}");
+        var progress_bar_offset_left = parseFloat("{{{ PROGRESS_BAR_OFFSET_LEFT }}}");
 
         // If no float values are parsed, values are NaN
         if (Number.isNaN(progress_bar_height) || Number.isNaN(progress_bar_offset_top)) {
           progress_bar_height = default_progress_bar_config.height;
           progress_bar_offset_top = default_progress_bar_config.top;
         } else if (progress_bar_height + progress_bar_offset_top > 100) {
-          console.warn('The progress bar top and height percentages can\'t exceed 100%. Using height/top defaults.');
+          console.warn("The progress bar top and height percentages can\"t exceed 100%. Using height/top defaults.");
 
           progress_bar_height = default_progress_bar_config.height;
           progress_bar_offset_top = default_progress_bar_config.top;
         } else {
-          progress_bar_height += '%';
-          progress_bar_offset_top += '%';
+          progress_bar_height += "%";
+          progress_bar_offset_top += "%";
         }
 
         if (Number.isNaN(progress_bar_width) || Number.isNaN(progress_bar_offset_left)) {
           progress_bar_width = default_progress_bar_config.width;
           progress_bar_offset_left = default_progress_bar_config.left;
         } else if (progress_bar_width + progress_bar_offset_left > 100) {
-          console.warn('The progress bar top and height percentages can\'t exceed 100%. Using width/left defaults.');
+          console.warn("The progress bar top and height percentages can\"t exceed 100%. Using width/left defaults.");
 
           progress_bar_width = default_progress_bar_config.width;
           progress_bar_offset_left = default_progress_bar_config.left;
         } else {
-          progress_bar_width += '%';
-          progress_bar_offset_left += '%';
+          progress_bar_width += "%";
+          progress_bar_offset_left += "%";
         }
 
         var progress_bar_config = {
@@ -101,8 +118,8 @@
           width: progress_bar_width,
           top: progress_bar_offset_top,
           left: progress_bar_offset_left,
-          background: '{{{ PROGRESS_BAR_BACKGROUND_COLOR }}}' || default_progress_bar_config.background_color,
-          color: '{{{ PROGRESS_BAR_COLOR }}}' || default_progress_bar_config.color,
+          background: "{{{ PROGRESS_BAR_BACKGROUND_COLOR }}}" || default_progress_bar_config.background_color,
+          color: "{{{ PROGRESS_BAR_COLOR }}}" || default_progress_bar_config.color,
         };
         var container = document.querySelector("#game-container");
         var canvas = document.querySelector("#unity-canvas");
@@ -115,5 +132,17 @@
     <div id="game-container">
       <canvas id="unity-canvas"></canvas>
     </div>
+
+    <script>
+      // Only during build we add the Unity loader
+      if (!getURLParameterByName("unity-editor-websocket-port")) {
+        var buildUrl = "Build";
+        var loader_URL = buildUrl + "/{{{ LOADER_FILENAME }}}";
+        var script = document.createElement("script");
+
+        script.src = loader_URL;
+        document.body.appendChild(script);
+      }
+    </script>
   </body>
 </html>
