Full changelog: - Added support for AirConsole API 1.8.0 which adds onMute(), onPause() and onResume() methods - Updated gamestates example to showcase the new methods onMute(), onPause() and onResume() - Improved codebase formatting of some files - Resolved several warnings from the plugin showing up in the Editor's Console - Removed broken gyroscope example - Grouped shared example assets

--- a/Assets/AirConsole/examples/swipe/swipe-controller.html
+++ b/Assets/AirConsole/examples/swipe/swipe-controller.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-  <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.7.0.js"></script>
-  <script type="text/javascript">
+  <script src="https://www.airconsole.com/api/airconsole-1.8.0.js"></script>
+  <script>
     /* ------------PLEASE READ THIS-----------
     * this script has been copied from https://github.com/AirConsole/airconsole-controls
     * If you'd like to use swiping or other elements of the AirConsole Controls library in your project, we recommend downloading the scripts
-    * from github and adding them to Assets/WebGLTemplates folder/AirConsole. 
+    * from github and adding them to Assets/WebGLTemplates folder/AirConsole.
     * We are pasting this script here because we don't want to bloat the whole plugin's WebGLTemplates folder with example code.
     * -------------THANK YOU-----------------
     */
@@ -254,7 +254,7 @@
   };
 
   /* End of swipe input script from https://github.com/AirConsole/airconsole-controls */
-  </script> 
+  </script>
 
   <style type=text/css>
   /* the style sheet dictates what our elements (buttons, backgrounds etc.) will look like. */
@@ -280,10 +280,10 @@
       width: 100%;
       height: 100%;
   }
-    
+
 
   </style>
-  
+
   <script type="text/javascript">
 
     var airconsole;
@@ -308,7 +308,7 @@
       });
     }
   </script>
- 
+
 </head>
 <body onload="window.app = new App()">
   <div id="background"></div>
