--- a/Assets/AirConsole/examples/pong/controller.html
+++ b/Assets/AirConsole/examples/pong/controller.html
@@ -1,9 +1,8 @@
 
 <html>
 <head>
-    <script type="text/javascript"
-            src="https://www.airconsole.com/api/airconsole-1.7.0.js"></script>
-    <script type="text/javascript">
+    <script src="https://www.airconsole.com/api/airconsole-1.8.0.js"></script>
+    <script>
 
     var airconsole;
     /**
@@ -11,7 +10,7 @@
      */
     function init() {
       airconsole = new AirConsole({"orientation": "portrait"});
-     
+
       airconsole.onActivePlayersChange = function(player_number) {
         updateText(player_number);
       }
@@ -24,7 +23,7 @@
       * --> WE STRONGLY ENCOURAGE YOU TO USE THE AIRCONSOLE CONTROLS LIBRARY
       * WHICH IS EVEN BETTER (BUT WE DONT WANT TO BLOAT THE CODE HERE).
       * https://github.com/AirConsole/airconsole-controls/
-      * 
+      *
       * DO NOT USE ONCLICK HANDLERS.
       * THEY ADD A 200MS DELAY!
       */
