--- a/Assets/WebGLTemplates/AirConsole/controller.html
+++ b/Assets/WebGLTemplates/AirConsole/controller.html
@@ -1,113 +1,221 @@
+<html lang="en">
+  <head>
+    <title>Controller - Game states</title>
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <script src="https://www.airconsole.com/api/airconsole-1.8.0.js"></script>
+    <script>
+      // The view manager finds all div containers with the "view" class and lets me show one view
+      // while hiding all others.
+      // See also: https://github.com/AirConsole/airconsole-view-manager
+      var ViewManager = {
+        views: {},
+        current_view_id: null,
 
-<html>
-<head>
-  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-  <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.8.0.js"></script>
-  <style type=text/css>
-  /* the style sheet dictates what our elements (buttons, backgrounds etc.) will look like. */
-  #background {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-  }
-
-  .button{
-    background: #3B3B3B;
-    font-size: 14px;
-    padding: 5px 10px 5px 10px;
-    border: solid #1f1f1f 2px;
-    height: 100%;
-    position: absolute;
-  }
-
-  #left-button{
-  	left: 0;
-  	width: 25%;
-  	height: 100%;
-  }
-
-  #right-button{
-  	left: 25%;
-  	width: 25%;
-  	height: 100%;
-  }
-
-  #jump-button{
-	right: 0;
-  	bottom: 0;
-  	width: 50%;
-  	height: 50%;
-  }
-
-  #interact-button{
-  	right: 0;
-  	top: 0;
-  	width: 50%;
-  	height: 50%;
-  }
-
-  .button-text{
-    position: absolute;
-    color: white;”
-    font-family: sans-serif;
-    text-align: center;
-    pointer-events: none;
-    width: 50%;
-    height: 20%;
-    left: 25%;
-    top: 40%;
-  }
-  </style>
-
-  <script type="text/javascript">
-
-    var airconsole;
-
-    function App() {
-      var me = this;
-      me.airconsole = new AirConsole({"orientation": "landscape", "synchronize_time" : "true"});
-
-      me.airconsole.onMessage = function(from, data) {
-        console.log("onMessage", from, data);
-      };
-
-      /*
-       * Here we are adding support for mouse events manually.
-       * --> WE STRONGLY ENCOURAGE YOU TO USE THE AIRCONSOLE CONTROLS LIBRARY
-       * WHICH IS EVEN BETTER (BUT WE DONT WANT TO BLOAT THE CODE HERE).
-       * https://github.com/AirConsole/airconsole-controls/
-       *
-       * DO NOT USE ONCLICK HANDLERS.
-       * THEY ADD A 200MS DELAY!
-       */
-      if (!("ontouchstart" in document.createElement("div"))) {
-        var elements = document.getElementsByTagName("*");
-        for (var i = 0; i < elements.length; ++i) {
-          var element = elements[i];
-          var ontouchstart = element.getAttribute("ontouchstart");
-          if (ontouchstart) {
-            element.setAttribute("onmousedown", ontouchstart);
+        init: function() {
+          var views = document.querySelectorAll('.view');
+          for (var i = 0; i < views.length; i++) {
+            this.views[views[i].id] = views[i];
           }
-          var ontouchend = element.getAttribute("ontouchend");
-          if (ontouchend) {
-            element.setAttribute("onmouseup", ontouchend);
+          return this;
+        },
+
+        show: function(id) {
+          var view = this.views[id];
+          if (view) {
+            this.current_view_id = id;
+            this.hideAll();
+            view.style.display = "block";
+          } else {
+            console.warn("Could not find view with ID:", id);
+          }
+          return this;
+        },
+
+        hideAll: function() {
+          for (var key in this.views) {
+            this.views[key].style.display = "none";
+          }
+        }
+      };
+    </script>
+    <style>
+      /* The style sheet dictates what our elements (buttons, backgrounds etc.) will look like. */
+      body {
+        margin: 0;
+      }
+
+      #background {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: -1;
+      }
+
+      .button-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+      }
+
+      .button-container>:not([hidden])~:not([hidden]) {
+        margin-top: 2vmin;
+      }
+
+      .button {
+        background-color: #080808;
+        border: solid #08F78F 2px;
+        color: #FFF;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 6vmin;
+        font-family: sans-serif;
+        border-radius: 10vmin;
+        padding: 4vmin 11vmin;
+        min-height: 40px;
+      }
+
+      #audio-button {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin-top: 2vmin;
+        margin-right: 2vmin;
+      }
+    </style>
+
+    <script>
+      var airconsole;
+
+      function App() {
+        var me = this;
+        var mute_button = document.getElementById("audio-button");
+
+        me.airconsole = new AirConsole({
+          orientation: "landscape",
+          synchronize_time : "true"
+        });
+
+        // Initialize the view manager
+        ViewManager.init();
+
+        me.airconsole.onMessage = function(from, data) {
+          console.log("onMessage", from, data);
+        };
+
+        me.airconsole.onReady = function(code) {
+          console.log("onReady", code);
+        };
+
+        me.airconsole.onCustomDeviceStateChange = function(device_id, device_data) {
+          // To see logs from the controller, start your game in the "virtual controllers" browser
+          // start mode from Unity and open your browser's developer console.
+          console.log("onCustomDeviceStateChange", device_id, device_data);
+
+          // Check if the device that sent the custom device state change is the Screen (i.e. the Unity Game, in this case), and not one of the other controllers
+          if (device_id === AirConsole.SCREEN) {
+            // Check if the CustomDeviceStateChange data contains any state data
+            if (device_data["state"] != null && device_data["state"] !== "") {
+              // Set a new view according to the screen's state
+              ViewManager.show(device_data["state"]);
+            }
+
+            // Check if there's any player color data
+            if (device_data["playerColors"] != null) {
+              // Check the CustomDeviceStateChange data contains any playerColorData for this
+              // particular device
+              if (device_data["playerColors"][me.airconsole.getDeviceId()]) {
+                // This works for named colors. If you want to use colors that don't have a name,
+                // you could pass a hex code instead of a string/name
+                document.getElementById("background").style.backgroundColor = device_data["playerColors"][me.airconsole.getDeviceId()];
+              }
+            }
+
+            // Update mute button label based on the current audio playing state
+            if (device_data.audioIsMuted) {
+              mute_button.innerHTML = "Unmute";
+            } else {
+              mute_button.innerHTML = "Mute";
+            }
+          }
+        };
+
+        /*
+         * Here we are adding support for mouse events manually.
+         * --> WE STRONGLY ENCOURAGE YOU TO USE THE AIRCONSOLE CONTROLS LIBRARY
+         * WHICH IS EVEN BETTER (BUT WE DONT WANT TO BLOAT THE CODE HERE).
+         * https://github.com/AirConsole/airconsole-controls/
+         *
+         * DO NOT USE ONCLICK HANDLERS.
+         */
+        if (!("ontouchstart" in document.createElement("div"))) {
+          var elements = document.getElementsByTagName("*");
+
+          for (var i = 0; i < elements.length; ++i) {
+            var element = elements[i];
+            var ontouchstart = element.getAttribute("ontouchstart");
+
+            if (ontouchstart) {
+              element.setAttribute("onmousedown", ontouchstart);
+            }
+            var ontouchend = element.getAttribute("ontouchend");
+            if (ontouchend) {
+              element.setAttribute("onmouseup", ontouchend);
+            }
           }
         }
       }
-    }
 
-    App.prototype.sendMessageToScreen = function(msg) {
-    	this.airconsole.message(AirConsole.SCREEN, {"action": msg});
-    };
+      var CONTROLLER_EVENTS = {
+        hello: 'hello',
+        toggleAudio: 'toggle-audio',
+        pauseGame: 'pause-game',
+        resumeGame: 'resume-game'
+      };
 
-  </script>
+      App.prototype.sendHelloMessage = function() {
+        this.airconsole.message(window.AirConsole.SCREEN, { action: CONTROLLER_EVENTS.hello });
+      };
 
-</head>
-<body onload="window.app = new App()">
-  <div id="background"></div>
-  <div class="button" id="left-button" ontouchstart="window.app.sendMessageToScreen('left')" ontouchend="window.app.sendMessageToScreen('left-up')"></div>
-  <div class="button" id="right-button" ontouchstart="window.app.sendMessageToScreen('right')" ontouchend="window.app.sendMessageToScreen('right-up')"></div>
-  <div class="button" id="jump-button" ontouchstart="window.app.sendMessageToScreen('jump')"></div>
-  <div class="button" id="interact-button" ontouchstart="window.app.sendMessageToScreen('interact')"></div>
-</body>
+      App.prototype.sendToggleAudioMessage = function() {
+        this.airconsole.message(window.AirConsole.SCREEN, { action: CONTROLLER_EVENTS.toggleAudio });
+      };
+
+      App.prototype.sendPauseGameMessage = function() {
+        this.airconsole.message(window.AirConsole.SCREEN, { action: CONTROLLER_EVENTS.pauseGame });
+      };
+
+      App.prototype.sendResumeGameMessage = function() {
+        this.airconsole.message(window.AirConsole.SCREEN, { action: CONTROLLER_EVENTS.resumeGame });
+      };
+    </script>
+  </head>
+  <body onload="window.app = new App()">
+    <div id="background"></div>
+
+    <div id="Playing" class="view">
+      <div class="button-container">
+        <div class="button" ontouchstart="window.app.sendHelloMessage()">
+          Send "Hello" to screen
+        </div>
+        <div class="button" ontouchstart="window.app.sendPauseGameMessage()">
+          Pause game
+        </div>
+      </div>
+    </div>
+
+    <div id="Paused" class="view">
+      <div class="button-container">
+        <div class="button" ontouchstart="window.app.sendResumeGameMessage()">
+          Resume game
+        </div>
+      </div>
+    </div>
+
+    <div id="audio-button" class="button" ontouchstart="window.app.sendToggleAudioMessage()">
+      Mute
+    </div>
+  </body>
 </html>
