--- a/Assets/WebGLTemplates/AirConsole/index.html
+++ b/Assets/WebGLTemplates/AirConsole/index.html
@@ -25,10 +25,10 @@
         transform: translate(-50%, 0%);
       }
     </style>
-    <script src="https://www.airconsole.com/api/airconsole-1.8.0.js"></script>
+    <script src="https://www.airconsole.com/api/airconsole-1.9.0-beta.js"></script>
     <script src="./airconsole-unity-plugin.js"></script>
     <script src="Build/UnityLoader.js"></script>
-    <script src="translation.js"></script>
+    <script src="airconsole-settings.js"></script>
     <script>
        function initAirConsole() {
          var unity_web_config = {
