--- a/Assets/WebGLTemplates/AirConsole-2020/controller.html
+++ b/Assets/WebGLTemplates/AirConsole-2020/controller.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-  <script type="text/javascript" src="http://localhost:8090/api/airconsole-1.10.0.js"></script>
+  <script type="text/javascript" src="https://ci-daniel-native-game-sizing-dot-airconsole.appspot.com/api/airconsole-1.10.0.js"></script>
   <style type=text/css>
   /* the style sheet dictates what our elements (buttons, backgrounds etc.) will look like. */
   #background {
